meetrivo_backend/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: meetrivo
  labels:
    app.kubernetes.io/name: meetrivo
    environment: production
