meetrivo_backend/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: meetrivo-backend-service
  namespace: meetrivo
  labels:
    app: meetrivo-backend
spec:
  selector:
    app: meetrivo-backend
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
